fixed alignment on quilt image

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,8 @@ h2 {
     padding: 1;
     overflow: hidden;
     background-color: #00008b;
+    color: white;
+    font-size: 28px;
     top: 25;
     margin-bottom: 50px;
     width: 100%;
@@ -92,12 +94,6 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-#images {
-    padding-inline: 20;
-    padding-left: 25;
-    max-width: 25%;
 }
 
 cite {
